# FileIoHandler

./: CMakeLists.txt  Dockerfile  Jenkinsfile  conanfile.txt
cmake/: deploy_test_files.cmake  file_io_handler_version.cmake  package_add_test.cmake
include/: FileIoHandler.hpp
scripts/: apply_clang-format.sh  build.sh  build_gcc.sh  clang-format.sh  configure.sh  dependency_graph.sh  install_dependencies.sh  run_tests.sh
src/: CMakeLists.txt  FileIoHandler.cpp  version.hpp
tests/: CMakeLists.txt  testFileIoHandler.cpp
